feat: listagem de todas as vendas cadastradas
