# swagger-output.json
@@ -349,6 +349,21 @@
             }
           }
         }
+      },
+      "get": {
+        "tags": [
+          "Venda"
+        ],
+        "summary": "Endpoint para listar todas as vendas",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
       }
     }
   }
